@@ -1,169 +1,0 @@
-/* IMPORTANT, PLEASE RESPECT THIS SEMANTIC ORDER !!! :
-	- position box,
-	- width,
-	- heigth,
-	- margin,
-	- background-color,
-	- background-image,
-	- padding,
-	- content (color, style font, ...),
-	- border,
-	 ... */
-
-html, body {background-color: #fff; color: #666; font-size:9pt;}
-
-/* ===== hypertext links ===== */
-a {background-color: transparent; color: #000; font-weight: bold; text-decoration: none;}
-a:hover {background-color:transparent; color: #ff6600;}
-
-/* ===== titles ===== */
-h1 {font-size: 1.4em; font-weight: bold;}
-h2 {font-size: 1.2em; font-weight: bold;}
-h3 {padding-bottom: 3px; font-size: 1.1em; font-weight: bold;}
-h4 {font-size: 1.1em; font-weight: bold;}
-h5 {font-size: .9em;}
-h6 {font-size: .8em;}
-
-/* ===== lists ===== */
-ul { margin: 2px; padding: 2px; list-style: decimal inside; text-align: left;}
-li { margin-left: 2px; background-color:transparent; color: #2F5376;}
-
-/* ===== images ===== */
-img {border: 0;}
-
-/* ===== others attributes of contents ===== */
-hr{ display:none;}
-p {}
-acronym, abbr { border-bottom: #000 1px dashed;}
-acronym:hover, abbr:hover { border-bottom-color: #ff9900;}
-q {}
-cite {}
-em {}
-dfn {}
-strong {}
-del {}
-address {}
-bdo {	direction: ltr;}
-
-/* ===== forms ===== */
-fieldset { margin: 0 0 1em 0; padding:1em; border: none;}
-legend {	font-size: 1.1em;	font-weight: bold;}
-label { display: block; float: left; font-weight: bold;}
-input {margin:3px; font-size: 1em; border: 1px solid #ccc;}
-button, input[type="submit"],input[type="button"], input[type="reset"], .xo-formbuttons, .formButton { background-color: #e6e6e6; color:inherit; border:1px solid #bbb; cursor: pointer;}
-button:focus, input[type="submit"]:focus,input[type="button"]:focus, input[type="reset"]:focus, .xo-formbuttons:focus, .formButton:focus,
-button:hover, input[type="submit"]:hover,input[type="button"]:hover, input[type="reset"]:hover, .xo-formbuttons:hover, .formButton:hover
- { background-color: #2F5376; color:#fff;}
-input.formButton {}
-
-select { background-color:#f6f6f6; color:inherit; border:1px solid #ccc; font-size: 1em;}
-select:focus { background-color:#fff; color:inherit; border:1px solid #999;}
-textarea {width: 85%; height: 110px; margin:0.5em 0.5em 0.5em 0; background-color:#eee; padding:5px; color:inherit; border:1px solid #bbb; overflow: auto;}
-textarea:focus { background-color:#fff; color:inherit; border:1px solid #999;}
-
-
-/* ===== contents (example for articles and news) ===== */
-.item {border: 1px solid #ccc;}
-.itemHead { background-color: #2F5376; padding: 3px; color: #fff;}
-.itemInfo { background-color: #efefef; color:#666; padding: 3px; text-align: right;}
-.itemTitle a { background-color: transparent; color: #fff; font-size: 1.2em; font-weight: bold; font-variant: small-caps;}
-.itemPoster {font-size: .9em; font-style:italic;}
-.itemPostDate {font-size: .9em; font-style:italic;}
-.itemStats {font-size: .9em; font-style:italic;}
-.itemBody {padding-left: 5px;}
-.itemText {margin-top: 5px; margin-bottom: 5px; line-height: 1.5em;}
-.itemText:first-letter {font-size: 1.3em; font-weight: bold;}
-.itemFoot { background-color: #efefef; padding: 3px; color:inherit; text-align: right;}
-.itemAdminLink {font-size: .9em;}
-.itemPermaLink {font-size: .9em;}
-
-/* ===== header ===== */
-#header {background-color: #2F5376; color:#fff;}
-#headerbanner {width: 100%; vertical-align: middle; text-align:center;}
-#headerbar { background-image: url(hbar.gif); border-bottom: 1px solid #ddd;}
-
-/* ===== left column ===== */
-#leftcolumn {width: 170px; font-size:1em; border-right: 1px solid #ccc;}
-#leftcolumn th {background-color: #2F5376; color: #fff; vertical-align: middle;}
-#leftcolumn .blockTitle { background-color: #ddd; padding: 3px; color: #639ACE; font-weight: bold; text-align:center;}
-#leftcolumn .blockContent {padding: 3px 3px 10px 3px; line-height: 1.2em;}
-
-/* ===== center column ===== */
-#centercolumn {font-size: 1em; text-align: justify;}
-#centercolumn th {background-color: #2F5376; color: #fff; vertical-align: middle;}
-
-#centerCcolumn, #bottomCcolumn {padding: 0 3px 1px 3px;}
-#centerCcolumn .blockTitle, #bottomCcolumn .blockTitle {background-color:transparent; padding: 3px 3px 0 10px; color: #639ACE; font-weight: bold; margin-top: 0; margin-right: 0;  margin-left: 0;}
-#centerCcolumn .blockContent, #bottomCcolumn .blockContent { line-height: 1.2em; border-left: 1px solid #ccc; border-right: 1px solid #ccc; border-bottom: 1px solid #ddd; padding: 3px; margin-right: 0;  margin-left: 0; margin-bottom: 2px;}
-
-#centerLcolumn, #bottomLcolumn, #centerRcolumn, #bottomRcolumn { width: 50%; padding: 0 3px 0 0;}
-#centerLcolumn .blockTitle, #bottomLcolumn .blockTitle, #centerRcolumn .blockTitle, #bottomRcolumn .blockTitle {
-	 margin-top: 0; background-color: transparent; padding: 3px 3px 0 10px; color: #639ACE; font-weight: bold;}
-#centerLcolumn .blockContent, #centerRcolumn .blockContent, #bottomLcolumn .blockContent, #bottomRcolumn .blockContent {
-	 line-height: 1.2em; border-left: 1px solid #ccc; border-right: 1px solid #ccc; border-bottom: 1px solid #ddd; padding: 3px; margin-left: 2px; margin-right: 3px; margin-bottom: 2px;}
-
-/* ===== content module ===== */
-#content {padding: 8px; text-align: justify;}
-
-/* ===== right column ===== */
-#rightcolumn {width: 170px; font-size:1em; border-left: 1px solid #ccc;}
-#rightcolumn th {background-color: #2F5376; color: #fff; vertical-align: middle;}
-#rightcolumn .blockTitle { background-color: #ddd; padding: 3px; color: #639ACE; font-weight: bold; text-align:center;}
-#rightcolumn .blockContent {padding: 3px 3px 10px 3px; line-height: 1.2em;}
-
-/* ===== footer ===== */
-#footerbar {background-image: url(hbar.gif); text-align:center;}
-
-/* ===== main menu block ===== */
-#mainmenu a { display: block; margin: 0; background-color: #e6e6e6; color:#666; padding: 4px;}
-#mainmenu a:hover {background-color: #fff; color:#ff6600;}
-#mainmenu a.menuTop {padding-left: 3px; border-top: 1px solid #c0c0c0; border-right: 1px solid #666; border-bottom: 1px solid #666; border-left: 1px solid #c0c0c0;}
-#mainmenu a.menuMain {padding-left: 3px; border-right: 1px solid #666; border-bottom: 1px solid #666; border-left: 1px solid #c0c0c0;}
-#mainmenu a.menuSub {padding: 2px 0 2px 9px; font-size:.9em; font-weight:normal; font-style: italic; border-right: 1px solid #666; border-bottom: 1px solid #666; border-left: 1px solid #c0c0c0;}
-
-/* ===== user menu block ===== */
-#usermenu a { display: block; margin: 0; background-color: #e6e6e6; padding: 4px; color:#666; font-size:.9em; font-style:italic; border-right: 1px solid #666; border-bottom: 1px solid #666; border-left: 1px solid #c0c0c0;}
-#usermenu a:hover {background-color: #fff; color:#ff6600;}
-#usermenu a.menuTop {border-top: 1px solid #c0c0c0;}
-#usermenu a.highlight {background-color: #fcc; color:inherit;}
-
-/* ===== tables ===== */
-caption {font-style: italic; font-weight: bold;}
-th, thead {background-color: #2F5376; padding : 2px; vertical-align : middle; color: #fff; font-weight:bold; font-family: Verdana, Arial, Helvetica, sans-serif; text-align:center;}
-table td {padding: 0; vertical-align: top; font-family: Verdana, Arial, Helvetica, sans-serif; border-width: 0;}
-.outer {border: 1px solid #c0c0c0;}
-.head {background-color: #c2cdd6; padding: 5px; color:inherit; font-weight: bold;}
-.even {background-color: #dee3e7; padding: 5px; color:inherit;}
-.odd {background-color: #E9E9E9; padding: 5px; color:inherit;}
-.foot, tfoot {background-color: #c2cdd6; padding: 5px; color:inherit; font-weight: bold;}
-tr.even td {background-color: #dee3e7; padding: 5px; color:inherit;}
-tr.odd td {background-color: #E9E9E9; padding: 5px; color:inherit;}
-
-/* ===== core messages ===== */
-.errorMsg { background-color: #FFCCCC; padding: 10px; color:inherit; font-weight: bold; text-align: center; border-top: 1px solid #DDDDFF; border-left: 1px solid #DDDDFF; border-right: 1px solid #aaa; border-bottom: 1px solid #aaa;}
-.confirmMsg { background-color: #DDFFDF; padding: 10px; color: #136C99; font-weight: bold; text-align: center; border-top: 1px solid #DDDDFF; border-left: 1px solid #DDDDFF; border-right: 1px solid #aaa; border-bottom: 1px solid #aaa;}
-.resultMsg { background-color : #ccc; padding: 10px; color: #333; font-weight: bold; text-align: center; border-top: 1px solid #c0c0c0; border-left: 1px solid #c0c0c0; border-right: 1px solid #666666; border-bottom: 1px solid #666;}
-
-/* ===== code and quote ===== */
-.xoopsCode { overflow: auto; height: 200px; background-color: #fff; padding: 6px; color:inherit;  font-family: "Courier New",Courier,monospace; border: 1px inset #000080;}
-.xoopsQuote { background-color: #fff; padding: 6px; color:inherit; font-family: "Courier New",Courier,monospace;border: 1px inset #000080;}
-blockquote { font-style: italic;}
-
-/* ===== content (example for forum) ===== */
-.comTitle {font-weight: bold; margin-bottom: 2px;}
-.comText {padding: 2px;}
-.comUserStat { margin: 2px; background-color: #fff; padding: 2px; color: #2F5376; font-size: .8em; font-weight:bold; border: 1px solid #c0c0c0;}
-.comUserStatCaption {font-weight: normal;}
-.comUserStatus {margin-left: 2px; margin-top: 10px; background-color: transparent; color: #2F5376; font-weight:bold; font-size: .8em;}
-.comUserRank {margin: 2px;}
-.comUserRankText {font-size: .8em; font-weight:bold;}
-.comUserRankImg {border: 0;}
-.comUserName a { background-color: transparent; color:#fff;}
-.comUserName a:hover { background-color:transparent; color: #ff6600;}
-.comUserImg {margin: 2px;}
-.comDate { font-size: .8em; font-weight: normal; font-style: italic;}
-.comDateCaption {font-weight: bold; font-style: normal;}
-.signature { font-size: .9em; font-style:italic;}
-
-/* ===== debug messages ===== */
-#xo-logger-output table {width:100%; font-size: .8em;}
