@@ -1,2 +1,0 @@
-@import url(style.css); 
-/* Very short Mac-specific additions/changes here (if any) */ 
