@@ -1,6 +1,0 @@
-<div style="padding: 0px 5px 0px 0px;">
-<{if $block.title}>
-<div class="blockTitle"><h3><{$block.title}></h3></div>
-<{/if}>
-<div class="blockContent"><{$block.content}></div>
-</div>
