@@ -1,4 +1,0 @@
-<{if $block.title}>
-<div class="blockTitle"><h3><{$block.title}></h3></div>
-<{/if}>
-<div class="blockContent"><{$block.content}></div>
